# lcie

./: .gitignore  pyproject.toml  requirements.txt
docs/: lcie_python_implementation_plan_2010ad83.plan.md  local_code_intelligence_engine_design_doc.md
src/embedddings/: sentence_tx.py
src/indexer/: chunker.py  pipeline.py  scanner.py
src/lcie/: cli.py  config.py
